# AI_TREND_Seismograph

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-trend-seismograph.yml  hourly-hotspots.yml
config/: datasets.yml  institutions.yml  methods.yml  sources.yml  thresholds.yml  trend_taxonomy.yml  watchlist.yml
data/: institutions.json  latest.json  push_events.json  rss.xml
data/history/: index.json
data/hotspots/: index.json  latest.json  oneoff_refresh.json
data/raw/: daily-20260613-c96cf9e4-arxiv.json  daily-20260613-c96cf9e4-github.json  daily-20260614-19916774-arxiv.json  daily-20260614-19916774-github.json  daily-20260616-eab8364a-arxiv.json  daily-20260616-eab8364a-github.json  daily-20260617-cb233df2-arxiv.json  daily-20260617-cb233df2-github.json  daily-20260619-000199b5-arxiv.json  daily-20260619-000199b5-github.json  daily-20260620-940f0a77-arxiv.json  daily-20260620-940f0a77-github.json  daily-20260621-91d24df1-arxiv.json  daily-20260621-91d24df1-github.json  daily-20260622-e675ca8a-arxiv.json  daily-20260622-e675ca8a-github.json  daily-20260623-63bcafc5-arxiv.json  daily-20260623-63bcafc5-github.json  daily-20260624-d9133a1a-arxiv.json  daily-20260624-d9133a1a-github.json  daily-20260625-a16d1c7d-arxiv.json  (+273 more)
docs/: site-style-rules.md
functions/: tsconfig.json
functions/api/: _utils.ts  (+3 more)
scripts/: copy-data.mjs  seed_taxonomy.py  setup_neon.sql  validate_env.py
tests/: test_core.py  test_curation.py
web/: astro.config.mjs  package.json  tsconfig.json
(+196 files in other folders)
